CHANGES-1.1.txt
---------------

CHANGES IN CUPS V1.1.19rc2

	- The configure script didn't add CPPFLAGS to the
	  compiler options or LDFLAGS to the DSO options (STR
	  #13)
	- The scheduler would try to write a debug log message
	  when starting a job that contained a NULL string. 
	  Since not all versions of snprintf() support NULL
	  string pointers this caused some problems (STR #20)
	- The testipp program now supports reading of IPP
	  message files such as those used for the job history
	  in /var/spool/cups.


CHANGES IN CUPS V1.1.19rc1

	- Added CUPS support files for Java, Perl, and PHP
	  (located in the "scripting" subdirectory...)
	- The scheduler now supports fast-reloads of the
	  cupsd.conf file when it is updated via HTTP.
	- The scheduler always changed the ownership of log
	  files; it now only does so if they are not in the /dev
	  directory (i.e. don't want to change the ownership and
	  permissions of /dev/null...)
	- Added libpaper support (patch from Jeff Licquia)
	- Added a new istring() rule for MIME types files that
	  does a case-insensitive comparison of strings.
	- The cups-lpd mini-daemon now sends jobs to the default
	  queue when an empty queue name (or "lp" and there is
	  no "lp" queue) is sent.
	- The scheduler now supports fax queues identified by a
	  "*cupsFax: True" attribute in the PPD file. When a job
	  can't be sent, it is held for 5 minutes by default
	  while other jobs are attempted.  The FaxRetryLimit and
	  FaxRetryInterval directives control the number of
	  retries and the time between retries.
	- The scheduler now preserves the default options of PPD
	  files when modifying/upgrading an existing PPD file.
	  When installing a new printer, the scheduler sets the
	  default media size to Letter or A4 as appropriate for
	  your locale.
	- The scheduler no longer limits the number of
	  BrowseAddress, BrowsePoll, BrowseRelay, Listen, Port,
	  SSLListen, and SSLPort directives to 10.